# omdbapi

./: .env.template  README.md  design.drawio  docker-compose.yaml
.github/workflows/: tests.yaml
mvp/: main.py
src/: Dockerfile  Makefile  main.py  pyproject.toml
src/api/: __init__.py
src/api/graphql/: __init__.py
src/api/graphql/omdb/: __init__.py  omdb.py
src/api/v1/: __init__.py
src/api/v1/monitoring/: __init__.py  health.py
src/app/controllers/: __init__.py  omdb.py
src/app/models/: __init__.py  omdb.py
src/app/repositories/: omdb.py
src/app/schemas/extras/: __init__.py  omdb.py
src/app/schemas/graph/: __init__.py  omdb.py
src/core/: config.py  server.py
src/core/crawler/: __init__.py  abc.py  base.py  cores.py  exceptions.py
src/core/exceptions/: __init__.py  base.py
src/core/fastapi/middlewares/: __init__.py  response_logger.py
src/core/utils/: decorators.py
src/tests/api/: conftest.py
src/tests/api/graphql/omdb/: test_omdb.py
src/tests/api/v1/monitoring/: test_health.py
src/tests/factory/: query.py
