[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Mani <mani.mozaffar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
graphene = "^3.2.2"
starlette-graphene3 = "^0.6.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
